# metis

./: .gitignore  CMakeLists.txt  metis-config.cmake.in
GKlib/: CMakeLists.txt  csr.c  fkvkselect.c  getopt.c  gk_macros.h  gk_mkmemory.h  gk_mkpqueue.h  gk_proto.h  gklib-config.cmake.in  graph.c  io.c  mcore.c  memory.c  seq.c  string.c  util.c
GKlib/test/: CMakeLists.txt  fis.c  gkgraph.c  rw.c
cmake/: FindGKlib.cmake
include/: CMakeLists.txt
libmetis/: CMakeLists.txt  balance.c  checkgraph.c  coarsen.c  contig.c  debug.c  initpart.c  kwayfm.c  macros.h  minconn.c  mmd.c  ometis.c  parmetis.c  pmetis.c  proto.h  refine.c  separator.c  sfm.c  srefine.c  util.c  wspace.c
programs/: CMakeLists.txt  cmdline_gpmetis.c  cmdline_m2gmetis.c  cmdline_mpmetis.c  cmdline_ndmetis.c  defs.c  defs.h  gpmetis.c  graphchk.c  io.c  m2gmetis.c  mpmetis.c  ndmetis.c  proto.h  smbfactor.c
